update join page header

--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -495,7 +495,7 @@
     "message": "Browse available requests"
   },
   "page.join.section.join-our-team.headline": {
-    "message": "<b>Use your skills to help animals</b>"
+    "message": "Use your skills to help animals"
   },
   "page.join.section.join-our-team.paragraph.0": {
     "message": "You want to do more for animals – and you’re not alone. Maybe you’ve been looking for a way to team up with like-minded people who share your values. Maybe you're ready to take the next step but haven’t found the right opportunity. Or maybe you know exactly what you’re capable of, and you’re just waiting for the moment to use your skills where they matter most – fighting for a better world for animals."
