update translation file

--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -480,7 +480,7 @@
     "message": "Every project we release is <b>100% free for everyone</b>. We believe in accessibility and transparency, and our projects reflect those values."
   },
   "page.index.section.stage.hero.alt": {
-    "message": "<no-localization>Compassion, Creativity, Code</no-localization>"
+    "message": "<no-localization>Empowering the movement through expert tech services</no-localization>"
   },
   "page.join.hero.image-alt": {
     "message": "You are their voice"
