--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -2148,7 +2148,7 @@
     "message": "See our impact"
   },
   "section.grants-cta.visit-year-review.heading": {
-    "message": "See our 2023 impact review"
+    "message": "See our 2024 year in review"
   },
   "section.grants-cta.visit-year-review.paragraph": {
     "message": "Read our annual impact review and see what we've accomplished last year."
